<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".PopupName" android:id="@+id/cLayout">

    <TextView
            android:text="@string/names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvPlayer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.443"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name1" android:layout_marginTop="8dp"
            android:hint="@string/name2" android:layout_marginEnd="48dp"/>
    <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/play"
            app:layout_constraintTop_toBottomOf="@+id/name4"
            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/name4"
            app:layout_constraintTop_toBottomOf="@+id/name3" android:layout_marginTop="8dp"
            android:hint="@string/name4" android:layout_marginEnd="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayer" android:layout_marginTop="32dp"
            android:hint="@string/name1" android:layout_marginEnd="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name2" android:layout_marginTop="8dp"
            android:hint="@string/name3" android:layout_marginEnd="48dp"/>
    <ImageButton
            android:layout_width="35dp"
            android:layout_height="30dp" app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:id="@+id/closePopupBtn2"
            app:layout_constraintStart_toEndOf="@+id/tvPlayer" android:layout_marginStart="25dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>