<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="itp.project.Popups.PopupStichansage"
        android:screenOrientation="landscape">


    <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp" app:srcCompat="@drawable/eye" android:id="@+id/eyeBtn"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/one"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/kreis"
            android:textAlignment="center"
            android:paddingTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/highest"
            android:layout_marginTop="16dp" android:id="@+id/stich1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/stich2"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <TextView
            android:text="0"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/highest"
            android:background="@drawable/kreis"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/highestStitch"
            app:layout_constraintStart_toStartOf="@+id/highestStitch" android:paddingTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/highestStitch" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/two"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/stich2"
            android:background="@drawable/kreis"
            android:textAlignment="center"
            android:paddingTop="15dp"
            app:layout_constraintStart_toEndOf="@+id/stich1" app:layout_constraintTop_toTopOf="@+id/stich1"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/stich3"/>
    <TextView
            android:text="@string/three"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/stich3"
            android:background="@drawable/kreis"
            android:textAlignment="center"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="@+id/stich1"
            app:layout_constraintStart_toEndOf="@+id/stich2" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/stich4"/>
    <TextView
            android:text="@string/four"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/stich4"
            android:background="@drawable/kreis"
            android:textAlignment="center"
            android:paddingTop="15dp"
            app:layout_constraintTop_toTopOf="@+id/stich1"
            app:layout_constraintStart_toEndOf="@+id/stich3" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/hstich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/highestStitch"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/muli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/muli"
            app:layout_constraintTop_toBottomOf="@+id/stich1"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/skip"
            app:layout_constraintHorizontal_chainStyle="spread" android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    <Button
            android:text="@string/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/skip"
            app:layout_constraintStart_toEndOf="@+id/muli" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/muli" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    <TextView
            android:text="@string/stichansage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp" android:textSize="30sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>