<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#fff"
        android:padding="10dp"
        tools:context="itp.project.popups.PopupSaveGame">
    <Button
            android:text="@string/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/deleteButton"
            app:layout_constraintTop_toBottomOf="@+id/inputName"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/inputName"/>
    <Button
            android:text="@string/save2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/saveButton"
            app:layout_constraintTop_toBottomOf="@+id/inputName"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/inputName"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputName"
            android:hint="@string/name"
            app:layout_constraintTop_toBottomOf="@+id/tView"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:importantForAutofill="no"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/tView" android:text="@string/save"
            app:layout_constraintHorizontal_bias="0.49" android:layout_marginStart="8dp" android:textSize="30sp"/>
    <ImageButton
            android:layout_width="34dp"
            android:layout_height="29dp" app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:id="@+id/closePopupBtn"
            app:layout_constraintStart_toEndOf="@+id/tView" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
