<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="itp.project.Popups.Popup_atout"
        android:screenOrientation="landscape">

    <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp" app:srcCompat="@drawable/eye" android:id="@+id/eyeBtn"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/atout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/atout"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:textSize="30sp"/>
    <Button
            android:text="@string/mitgehen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/aus"
            app:layout_constraintTop_toBottomOf="@+id/at"
            android:textColor="@color/white" android:background="@color/colorPrimary" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/aussteigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aus"
            app:layout_constraintStart_toEndOf="@+id/mit"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/mit" android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp" app:srcCompat="@drawable/kreis" android:id="@+id/at"
            android:background="@drawable/kreis" app:layout_constraintTop_toBottomOf="@+id/atout"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>